@@ -46,9 +46,9 @@ CHANGES SINCE 2.3
 
 16. New (shell rewrite) AdaScript `` may have backslash escapes.
 
-17. New: variable declaration names are checked for common mispellings (e.g. "hi" vs. "high") should the similar variable exist and be visible. [types, etc. too]
+17. New: variable declaration names are checked for common mispellings (e.g. "hi" vs. "high") should the similar variable exist and be visible.
 
-18. New: long names ought to have underscores. [type tests needed]
+18. New: long names ought to have underscores.
 
 19. Fix: trailing underscores not allowed in variable names.
 
