@@ -92,6 +92,11 @@ pragma import( C, dup );
 function dup2( oldfd, newfd : aFileDescriptor ) return aFileDescriptor;
 pragma import( C, dup2 );
 
+type mode_t is unsigned_long;
+
+function umask( mask :mode_t ) return mode_t;
+pragma import( C, umask );
+
 function isatty( fd : aFileDescriptor ) return integer;
 pragma import( C, isatty );
 -- standard C library function returns 1 (true) if file is a tty
