@@ -1,0 +1,4 @@
+--This should fail
+
+type aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa is new integer; -- no underscore
+
