@@ -1,0 +1,4 @@
+--This should fail
+
+subtype aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa is integer; -- no underscore
+
